--- a/renovation/src/views/components/portfolio/portfolio.pug
+++ b/renovation/src/views/components/portfolio/portfolio.pug
@@ -1,4 +1,4 @@
-section.portfolio_area.p_100
+section.portfolio_area
   .container
     .portfolio_filter
       ul.list_style
@@ -15,73 +15,91 @@ section.portfolio_area.p_100
     .row.grid_portfolio_area
       .col-lg-4.col-sm-6.col-12.commercial.landscaping
         .portfolio_item
+          a.lightbox(href='../../../assets/images/Smith-residence.jpg')(data-lightbox="example-set")
           .portfolio_img
-            .light(href='../../../assets/images/Smith-residence.jpg')
+            a.light
               img.img-fluid(src='../../../assets/images/Smith-residence.jpg' alt='')
           .portfolio_text
             a(href='#')
-              h4 Kitchen
+              h4 Smith Residence
+              .view View Project
       .col-lg-4.col-sm-6.col-12.landscaping.residential
         .portfolio_item
+          a.lightbox(href='../../../assets/images/portfolio-4.jpg')(data-lightbox="example-set")
           .portfolio_img
-            .light(href='../../../assets/images/portfolio-4.jpg')
+            a.light
               img.img-fluid(src='../../../assets/images/portfolio-4.jpg' alt='')
           .portfolio_text
             a(href='#')
-              h4 Kitchen
+              h4 Smith Residence
+              .view View Project
       .col-lg-4.col-sm-6.col-12.commercial.residential
         .portfolio_item
+          a.lightbox(href='../../../assets/images/portfolio-7.jpg')(data-lightbox="example-set")
           .portfolio_img
-            .light(href='../../../assets/images/portfolio-7.jpg')
+            a.light
               img.img-fluid(src='../../../assets/images/portfolio-7.jpg' alt='')
           .portfolio_text
             a(href='#')
-              h4 Kitchen
+              h4 Smith Residence
+              .view View Project
       .col-lg-4.col-sm-6.col-12.commercial.residential
         .portfolio_item
+          a.lightbox(href='../../../assets/images/portfolio-4.jpg')(data-lightbox="example-set")
           .portfolio_img
-            .light(href='../../../assets/images/portfolio-4.jpg')
+            a.light
               img.img-fluid(src='../../../assets/images/portfolio-4.jpg' alt='')
           .portfolio_text
             a(href='#')
-              h4 Kitchen
+              h4 Outdoor Pergola
+              .view View Project
       .col-lg-4.col-sm-6.col-12.landscaping.newconstruction
         .portfolio_item
+          a.lightbox(href='../../../assets/images/portoflio-5.jpg')(data-lightbox="example-set")
           .portfolio_img
-            .light(href='../../../assets/images/portoflio-5.jpg')
+            a.light
               img.img-fluid(src='../../../assets/images/portoflio-5.jpg' alt='')
           .portfolio_text
             a(href='#')
-              h4 Kitchen
+              h4 Smith Residence
+              .view View Project
       .col-lg-4.col-sm-6.col-12.newconstruction.residential
         .portfolio_item
+          a.lightbox(href='../../../assets/images/Brown-Residence.jpg')(data-lightbox="example-set")
           .portfolio_img
-            .light(href='../../../assets/images/Brown-Residence.jpg')
+            a.light
               img.img-fluid(src='../../../assets/images/Brown-Residence.jpg' alt='')
           .portfolio_text
             a(href='#')
-              h4 Kitchen
+              h4 Smith Residence
+              .view View Project
       .col-lg-4.col-sm-6.col-12.landscaping
         .portfolio_item
+          a.lightbox(href='../../../assets/images/Brown-Residence.jpg')(data-lightbox="example-set")
           .portfolio_img
-            .light(href='../../../assets/images/portfolio-7.jpg')
-              img.img-fluid(src='../../../assets/images/portfolio-7.jpg' alt='')
+            a.light
+              img.img-fluid(src='../../../assets/images/Brown-Residence.jpg' alt='')
           .portfolio_text
             a(href='#')
-              h4 Kitchen
+              h4 Outdoor Pergola
+              .view View Project
       .col-lg-4.col-sm-6.col-12.newconstruction
         .portfolio_item
+          a.lightbox(href='../../../assets/images/Smith-residence.jpg')(data-lightbox="example-set")
           .portfolio_img
-            .light(href='../../../assets/images/Smith-residence.jpg')
+            a.light
               img.img-fluid(src='../../../assets/images/Smith-residence.jpg' alt='')
           .portfolio_text
             a(href='#')
-              h4 Kitchen
-      .col-lg-4.col-sm-6.col-12.landscaping.newconstruction
+              h4 Smith Residence
+              .view View Project
+      .col-lg-4.col-sm-6.col-12.residential
         .portfolio_item
+          a.lightbox(href='../../../assets/images/landscaping-1.jpg')(data-lightbox="example-set")
           .portfolio_img
-            .light(href='../../../assets/images/landscaping-1.jpg')
+            a.light
               img.img-fluid(src='../../../assets/images/landscaping-1.jpg' alt='')
           .portfolio_text
             a(href='#')
-              h4 Kitchen
+              h4 Outdoor Pergola
+              .view View Project
