--- a/renovation/src/views/components/portfolio/portfolio.scss
+++ b/renovation/src/views/components/portfolio/portfolio.scss
@@ -1,3 +1,7 @@
+.portfolio_area {
+    width: 100%;
+}
+
 .container {
     padding: 0 10%;
     width: 100%;
@@ -68,10 +72,18 @@
 }
 
 .portfolio_item {
-    text-align: center;
     position: relative;
     &:hover .portfolio_text {
         opacity: 1;
+    }
+    .lightbox {
+        position: absolute;
+        z-index: 10;
+        top: 3px;
+        bottom: 3px;
+        left: 0;
+        right: 0;
+        opacity: 0;
     }
     .portfolio_img {
         position: relative;
@@ -81,32 +93,16 @@
         .light {
             display: block;
             position: relative;
+            z-index: 4;
             max-width: 100%;
             @include min-xxs {
-                height: 280px;
-                margin-bottom: -55px;
-                padding: 20px 0;
+                padding: 10px 0;
             }
             @include min-xs {
-                height: 400px;
-                margin-bottom: -95px;
-                padding: 20px 0;
+                padding: 10px 0;
             }
-            @include min-sm {
-                margin-bottom: -170px;
-                padding: 20px 0;
-            }
-            @include min-md {
-                height: 485px;
-                margin-bottom: -200px;
-            }
-            @include min-lg {
-                height: 520px;
-                margin-bottom: -325px;
-            }
-            @include min-xl {
-                height: 620px;
-                margin-bottom: -380px;
+            @media screen and (min-width: 361px) {
+                padding: 10px 0;
             }
             &:before {
                 content: "";
@@ -133,6 +129,8 @@
             max-width: 100%;
             top: 0;
             left: 0;
+            right: 0;
+            bottom: 0;
             height: auto;
             overflow: hidden;
             display: block;
@@ -141,8 +139,8 @@
     .portfolio_text {
         position: absolute;
         z-index: 3;
-        top: 15px;
-        bottom: 0;
+        top: 3px;
+        bottom: 3px;
         left: 0;
         right: 0;
         opacity: 0;
@@ -150,6 +148,7 @@
         background-color: rgba(0, 0, 0, 0.65);
         h4 {
             font-size: 18px;
+            z-index: 2;
             color: #3e606b;
             font-family: "Playfair Display", serif;
             margin-top: 25px;
@@ -161,12 +160,35 @@
             font-size: 20px;
             position: absolute;
             top: 70%;
-            left: 20%;
+            left: 30%;
             -webkit-transform: translate(-50%, -50%);
             -ms-transform: translate(-50%, -50%);
             transform: translate(-50%, -50%);
             &:hover {
                 color: #fcb827;
+            }
+        }
+        .view {
+            font-size: 18px;
+            color: #3e606b;
+            font-family: "Playfair Display", serif;
+            margin-top: 25px;
+            margin-bottom: 0px;
+            -webkit-transition: all 400ms linear 0s;
+            -o-transition: all 400ms linear 0s;
+            transition: all 400ms linear 0s;
+            color: white;
+            font-size: 20px;
+            position: absolute;
+            top: 80%;
+            left: 27%;
+            -webkit-transform: translate(-50%, -50%);
+            -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+            &::after {
+                font-family: 'Fontawesome';
+                content: " \f101";
+                font-size: 15px;
             }
         }
     }
