--- a/renovation/src/views/layouts/master.pug
+++ b/renovation/src/views/layouts/master.pug
@@ -40,7 +40,6 @@ html(lang='jp')
     //- Fonts
     //- link(href="https://fonts.googleapis.com/css?family=Quicksand", rel='stylesheet')
 
-    script(src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js")
     //- Title
     block title
       title Your project!
@@ -52,12 +51,13 @@ html(lang='jp')
     //- block content
     block content
 
+    //- include ../components/services/services
+
     include ../components/portfolio/portfolio.pug
 
     //- block scripts
     block scripts
 
-    
     script(id="ze-snippet", src="https://static.zdassets.com/ekr/snippet.js?key=a0d065e1-295a-4de9-89f4-106bb253506a" defer)
     script(src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDo8ICXyf-BwI1tBv-PJxvHgm-0wUbTLAY&libraries=places" defer)
     script(src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js" defer)
