--- a/Nhom4_Kempinki/src/views/components/homepage/explore/explore.scss
+++ b/Nhom4_Kempinki/src/views/components/homepage/explore/explore.scss
@@ -20,7 +20,7 @@ $height_hotels_des: 550px;
   width: 100%;
   height: 1px;
   top: 12px;
-  background: $text-color-footer;
+  background: $text-color;
 }
 .explore {
   background: #f3f3f3 !important;
@@ -219,10 +219,10 @@ $height_hotels_des: 550px;
                 bottom: 0;
                 left: 20px;
                 padding: 3px 10px;
-                border: 2px solid $text-color-footer;
+                border: 2px solid $text-color;
                 &:hover {
-                  transition: all 0.2s;
-                  background: $text-color-footer;
+                  transition: all 0.3s;
+                  background: $text-color;
                   color: white;
                 }
               }
