--- a/Nhom4_Kempinki/src/assets/styles/base/_variables.scss
+++ b/Nhom4_Kempinki/src/assets/styles/base/_variables.scss
@@ -69,7 +69,7 @@ $colors: (
 );
 // // main-colors:
 $text-color: color(text-color);
-$text_color-footer: color(text-color-footer);
+$text-color-footer: color(text-color-footer);
 $bg-color: color(bg-color);
 $bg-color-primary: color(c-blue);
 $bg-color-primary-white: color(c-white);
