--- a/Nhom4_Kempinki/src/assets/styles/_app.scss
+++ b/Nhom4_Kempinki/src/assets/styles/_app.scss
@@ -5,11 +5,11 @@
 @import './base/_functions';
 @import './base/_variables';
 @import './base/_mixins';
-@import '../../../node_modules/slick-carousel/slick/slick.css';
-@import '../../../node_modules/slick-carousel/slick/slick-theme.scss';
 @import './base/_fonts';
 @import '../../../node_modules/slick-carousel/slick/slick.css';
 @import '../../../node_modules/slick-carousel/slick/slick-theme.scss';
+@import '../../../node_modules/choices.js/public/assets/styles/choices.min.css';
+@import '../../../node_modules/mapbox-gl/dist/mapbox-gl.css';
 @import './base/animate.css';
 @import './base/jquery.fancybox.min.css';
 @import './base/_global';
@@ -19,6 +19,8 @@
 // Component
 @import '../../views/components/homepage/explore/explore';
 @import '../../views/components/header/header';
+@import '../../views/components/homepage/introducePage/introduce';
+@import '../../views/components/homepage/mapbox/mapbox';
 @import '../../views/components/footer/footer';
 @import '../../views/components/homepage/experiences/experiences';
 @import '../../views/components/homepage/gallery/gallery';
