--- a/Nhom4_Kempinki/src/views/layouts/master.pug
+++ b/Nhom4_Kempinki/src/views/layouts/master.pug
@@ -1,7 +1,7 @@
 //- Master layout
 
 doctype html
-html(lang='jp')
+html(lang='en')
   head
 
     //- Meta
@@ -37,9 +37,6 @@ html(lang='jp')
     //- Favicons
     link(rel='shortcut icon', href=require('images/favicons/favicon.ico'))
 
-    //- Fonts
-    //- link(href="https://fonts.googleapis.com/css?family=Quicksand", rel='stylesheet')
-
 
 
     //- Title
@@ -52,12 +49,6 @@ html(lang='jp')
 
     //- block content
     block content
-
-    
-    include ../components/homepage/experiences/experiences.pug
-    include ../components/homepage/gallery/gallery.pug
-    include ../components/homepage/specialoffers/specialoffers.pug
-    include ../components/homepage/explore/explore.pug
     
     include ../components/footer/footer.pug
     //- block scripts
