--- a/Nhom4_Kempinki/src/views/index.pug
+++ b/Nhom4_Kempinki/src/views/index.pug
@@ -1,16 +1,13 @@
 extends ./layouts/master.pug
 
 block title
-  title Kempinski
+  title My Page - Index
 
 block content
-  - var pages = { homePage: '/homepage', testPage: '/test'  }
-
-  //- Desktop page
-  section.page.home__page
-    h1.page__title # Index Homepage
-
-    ul(style="list-style: disc; padding-left: 4rem; margin: 4rem 0")
-      each val, index in pages
-        li
-          a(href=val)= index
+  .page-wrapper
+    .inner-page-wrapper
+        include components/homepage/introducePage/introduce.pug
+        include components/homepage/mapbox/mapbox.pug
+        include components/homepage/experiences/experiences.pug
+        include components/homepage/specialoffers/specialoffers.pug
+        include components/homepage/explore/explore.pug 
