--- a/renovation/src/views/components/footer/footer.pug
+++ b/renovation/src/views/components/footer/footer.pug
@@ -9,7 +9,7 @@ footer
                 a.btn_contact_us(href="")
                     span Contact us
     .wrapper_footer
-        .container 
+        .container.overHidden
             .row
                 .col-xs-12.col-sm-3.col-md-3.col-lg-3
                     .column_footer
