--- a/renovation/src/views/index.pug
+++ b/renovation/src/views/index.pug
@@ -4,7 +4,7 @@ block title
   title Renovation
 
 block content
-  - var pages = { homePage: '/homepage', testPage: '/test' }
+  - var pages = { homePage: '/homePage', testPage: '/test', testimonail2: '/testimonails'}
 
   //- Desktop page
   section.page.home__page
