--- a/renovation/src/views/pages/homepage.pug
+++ b/renovation/src/views/pages/homepage.pug
@@ -1,7 +1,7 @@
 extends ../layouts/master.pug
 
 block title
-  title My Page - home
+  title My Page - Index
 
 block basicSeo
   meta(name='description' content='home page')
