--- a/renovation/src/assets/styles/_app.scss
+++ b/renovation/src/assets/styles/_app.scss
@@ -13,3 +13,4 @@
 // Component
 @import '../../views/components/header/header';
 @import '../../views/components/footer/footer';
+@import '../../views/components/testimonials/testimonials';
