--- a/renovation/src/views/components/header/header.pug
+++ b/renovation/src/views/components/header/header.pug
@@ -10,24 +10,25 @@ header
                     .nav_container_left
                         .menu_left
                             ul.menu_left_lv1
-                                li
+                                li 
                                     a(href="/")
                                         span home
                                 li.li__shop
                                     a.link__shop(href="#")
                                         span.span_icon_shop shop
                                     ul.menu_left_lv2
-                                        li
-                                            a(href="#") 
-                                                span.icon_account My Account
-                                        li
-                                            a(href="#")
-                                                span.icon_cart Shopping cart
-                                        li
-                                            a(href="#")
-                                                span.icon_checkout Checkout
+                                        .wrap_li_lv2
+                                            li
+                                                a(href="#") 
+                                                    span.icon_account My Account
+                                            li
+                                                a(href="#")
+                                                    span.icon_cart Shopping cart
+                                            li
+                                                a(href="#")
+                                                    span.icon_checkout Checkout
                                 li
-                                    a(href="#")
+                                    a(href="testimonials")
                                         span services
                                 li
                                     a(href="#")
@@ -37,8 +38,8 @@ header
                     .nav_container_right
                         .menu_right
                             ul.menu_right_lv1
-                                li
-                                    a(href="#") 
+                                li.menu_right_lv1__testimonial
+                                    a(href="testimonials") 
                                         span testimonials
                                 li
                                     a(href="#") 
@@ -79,3 +80,9 @@ header
                     a.link_menu_lv1(href="#") latestnews
                 li.menu_lv1
                     a.link_menu_lv1(href="#") contact us
+
+.banner
+    .container
+        .wrap-title
+            .title P
+            
