--- a/Nhom4_Kempinki/src/views/components/homepage/explore/explore.pug
+++ b/Nhom4_Kempinki/src/views/components/homepage/explore/explore.pug
@@ -4,9 +4,9 @@
         span Over 70 hotels
     .select_countries
         .country_name
-            .name 
+            .name.selected
                 a China
-                span.circle
+                span
             .name
                 a Republic of Singapore
                 span
