--- a/Nhom4_Kempinki/src/assets/styles/base/_variables.scss
+++ b/Nhom4_Kempinki/src/assets/styles/base/_variables.scss
@@ -19,24 +19,23 @@ $font-weight: (
 );
 
 $fonts: (
-    main: ("Helvetica",sans-serif),
-    kingscalson: ("KingsCalsonItalic",Arial,sans-serif),
+    main: ("Roboto",sans-serif),
+    heading: ('Kreon', sans-serif),
+    content: ('ProximaNova', sans-serif),
     icomoon: ('icomoon'),
     fontawesome: ('Fontawesome'),
-    arial: ('Arial'),
-    helvelticaBold: ('Helvetica-bold'),
-    helvelticaRegular: ('Helvetica-Regular')
+    hel: ('Helvetica_Neue', sans-serif),
+    hel-light : ('Helvetica',sans-serif),
+    kings-caslon : ('KingsCaslon',sans-serif)
 );
 
 $font-main: fonts(main);
-$font-helvelticaBold: fonts(helvelticaBold);
-$font-helvelticaRegular: fonts(helvelticaRegular);
-$font-kingscalson: fonts(kingscalson);
+$font-heading: fonts(heading);
 $font-icomoon: fonts(icomoon);
 $font-fontawesome: fonts(fontawesome);
-$font-arial: fonts(arial);
-$font-icomoon: fonts(icomoon);
-
+$font-hel: fonts(hel);
+$font-hel-light: fonts(hel-light);
+$font-kings-caslon: fonts(kings-caslon);
 $fontweight-light: fontWeight(light);
 $fontweight-regular: fontWeight(regular);
 $fontweight-medium: fontWeight(medium);
@@ -47,7 +46,7 @@ $fz-root: 62.5%; // root font-size, DO NOT CHANGE
 $gutter: 2rem;
 $gutter-xs: 1.5rem;
 $gutter-md: 2rem;
-$container: 75.6%;
+$container: 1170px;
 
 // colors
 $colors: (
@@ -64,7 +63,6 @@ $colors: (
     c-pink-light: #EBCCD1,
     c-red: #A94442,
     bg-color: #010f2a,
-    text-color: #010f2a,
     text-color-footer: #b5a191
 );
 // // main-colors:
