--- a/renovation/src/views/components/header/header.pug
+++ b/renovation/src/views/components/header/header.pug
@@ -9,7 +9,7 @@ header
                     .nav_container_left
                         .menu_left
                             ul.menu_left_lv1
-                                li 
+                                li.active_menu_destop_lv1
                                     a(href="/")
                                         span home
                                 li.li__shop
