--- a/Nhom4_Kempinki/src/views/components/homepage/explore/explore.pug
+++ b/Nhom4_Kempinki/src/views/components/homepage/explore/explore.pug
@@ -6,7 +6,7 @@
         .country_name
             .name 
                 a China
-                span.circle
+                span
             .name
                 a Republic of Singapore
                 span
