--- a/Nhom4_Kempinki/src/views/components/homepage/gallery/gallery.pug
+++ b/Nhom4_Kempinki/src/views/components/homepage/gallery/gallery.pug
@@ -38,9 +38,9 @@
 #anasalali.gallery-slide2
     .container-fluid
         .row
-            .col-lg-7.col-photo
+            .col-lg-7
                 img(src="../../../../assets/images/anasanali.jpg", alt="anasanali")
-                a(href="", class="report-image ", title="Report photo?") 
+                a(class="report-image ", title="Report photo?") 
             .col-lg-5
                 .user
                     a(href="")
@@ -60,17 +60,15 @@
                             a(href=""): i.fa.fa.fa-pinterest-p
                 h3 Book This Hotel Now
                 .hotel-info
-                    a(href="")
-                        img(src="../../../../assets/images/anasanali.jpg", alt="anasanali")
-                        p  Hotel california hotel california
-                a(href="")
-                    p.photo-copy Powered by Olapic
+                    img(src="../../../../assets/images/anasanali.jpg", alt="anasanali")
+                    p  hotel california
+                p.photo-copy Powered by Olapic
 #bernabetv.gallery-slide2
     .container-fluid
         .row
-            .col-lg-7.col-photo
+            .col-lg-7
                 img(src="../../../../assets/images/bernabetv.jpg", alt="bernabetv")
-                a(href="", class="report-image ", title="Report photo?") 
+                a(class="report-image ", title="Report photo?") 
             .col-lg-5
                 .user
                     a(href="")
@@ -90,17 +88,15 @@
                             a(href=""): i.fa.fa.fa-pinterest-p
                 h3 Book This Hotel Now
                 .hotel-info
-                    a(href="")
-                        img(src="../../../../assets/images/bernabetv.jpg", alt="bernabetv")
-                        p  Hotel california hotel california
-                a(href="")
-                    p.photo-copy Powered by Olapic
+                    img(src="../../../../assets/images/bernabetv.jpg", alt="bernabetv")
+                    p  hotel california
+                p.photo-copy Powered by Olapic
 #tourismsa.gallery-slide2
     .container-fluid
         .row
-            .col-lg-7.col-photo
+            .col-lg-7
                 img(src="../../../../assets/images/tourismsa.jpg", alt="seychellestourismsa")
-                a(href="", class="report-image ", title="Report photo?") 
+                a(class="report-image ", title="Report photo?") 
             .col-lg-5
                 .user
                     a(href="")
@@ -120,17 +116,15 @@
                             a(href=""): i.fa.fa.fa-pinterest-p
                 h3 Book This Hotel Now
                 .hotel-info
-                    a(href="")
-                        img(src="../../../../assets/images/tourismsa.jpg", alt="seychellestourismsa")
-                        p  Hotel california hotel california
-                a(href="")
-                    p.photo-copy Powered by Olapic
+                    img(src="../../../../assets/images/tourismsa.jpg", alt="seychellestourismsa")
+                    p  hotel california
+                p.photo-copy Powered by Olapic
 #grotesque.gallery-slide2
     .container-fluid
         .row
-            .col-lg-7.col-photo
+            .col-lg-7
                 img(src="../../../../assets/images/grotesque.jpg", alt="anny_grotesque")
-                a(href="", class="report-image ", title="Report photo?") 
+                a(class="report-image ", title="Report photo?") 
             .col-lg-5
                 .user
                     a(href="")
@@ -150,17 +144,15 @@
                             a(href=""): i.fa.fa.fa-pinterest-p
                 h3 Book This Hotel Now
                 .hotel-info
-                    a(href="")
-                        img(src="../../../../assets/images/grotesque.jpg", alt="anny_grotesque")
-                        p  Hotel california hotel california
-                a(href="")
-                    p.photo-copy Powered by Olapic
+                    img(src="../../../../assets/images/grotesque.jpg", alt="anny_grotesque")
+                    p  hotel california
+                p.photo-copy Powered by Olapic
 #dubai.gallery-slide2
     .container-fluid
         .row
-            .col-lg-7.col-photo
+            .col-lg-7
                 img(src="../../../../assets/images/dubai.jpg", alt="brasileiros_em_dubai")
-                a(href="", class="report-image ", title="Report photo?") 
+                a(class="report-image ", title="Report photo?") 
             .col-lg-5
                 .user
                     a(href="")
@@ -180,17 +172,15 @@
                             a(href=""): i.fa.fa.fa-pinterest-p
                 h3 Book This Hotel Now
                 .hotel-info
-                    a(href="")
-                        img(src="../../../../assets/images/dubai.jpg", alt="brasileiros_em_dubai")
-                        p  Hotel california hotel california
-                a(href="")
-                    p.photo-copy Powered by Olapic
+                    img(src="../../../../assets/images/dubai.jpg", alt="brasileiros_em_dubai")
+                    p  hotel california
+                p.photo-copy Powered by Olapic
 #kandaclub.gallery-slide2
     .container-fluid
         .row
-            .col-lg-7.col-photo
+            .col-lg-7
                 img(src="../../../../assets/images/kandaclub.jpg", alt="kandaclub")
-                a(href="", class="report-image ", title="Report photo?") 
+                a(class="report-image ", title="Report photo?") 
             .col-lg-5
                 .user
                     a(href="")
@@ -210,8 +200,6 @@
                             a(href=""): i.fa.fa.fa-pinterest-p
                 h3 Book This Hotel Now
                 .hotel-info
-                    a(href="")  
-                        img(src="../../../../assets/images/kandaclub.jpg", alt="kandaclub")
-                        p  Hotel california hotel california
-                a(href="")
-                    p.photo-copy Powered by Olapic
+                    img(src="../../../../assets/images/kandaclub.jpg", alt="kandaclub")
+                    p  hotel california
+                p.photo-copy Powered by Olapic
