--- a/Nhom4_Kempinki/src/assets/styles/base/_variables.scss
+++ b/Nhom4_Kempinki/src/assets/styles/base/_variables.scss
@@ -31,7 +31,7 @@ $fonts: (
 $font-main: fonts(main);
 $font-helvelticaBold: fonts(helvelticaBold);
 $font-helvelticaRegular: fonts(helvelticaRegular);
-$font-kingscalson: fonts(kingscalson);
+$font-kingscalson: fonts(kingscalson);  
 $font-icomoon: fonts(icomoon);
 $font-fontawesome: fonts(fontawesome);
 $font-arial: fonts(arial);
@@ -55,7 +55,10 @@ $colors: (
     c-white-blur: #f5f6f7,
     c-blue: #0089ce,
     c-dark-blue: #003b59,
-    c-dark-blue-navy: #00052e,
+    // c-dark-blue-navy: #00052e,
+    c-dark-blue-navy: #010F2A,
+    c-dark-blue-navy-1: #021b4d,
+    c-dark-blue-navy-2: #02215c,
     c-pink: #ff566b,
     c-black: #000000,
     c-yellow: #f8b62d,
@@ -64,13 +67,14 @@ $colors: (
     c-pink-light: #EBCCD1,
     c-red: #A94442,
     bg-color: #010f2a,
-    text-color: #010f2a,
-    text-color-footer: #b5a191
+    text-color: #b5a191,
 );
 // // main-colors:
 $text-color: color(text-color);
-$text-color-footer: color(text-color-footer);
 $bg-color: color(bg-color);
+$bg-color-dark-blue-navy: color(c-dark-blue-navy);
+$bg-color-dark-blue-navy-1: color(c-dark-blue-navy-1);
+$bg-color-dark-blue-navy-2: color(c-dark-blue-navy-2);
 $bg-color-primary: color(c-blue);
 $bg-color-primary-white: color(c-white);
 $bg-color-primary-pink: color(c-pink);
