--- a/Nhom4_Kempinki/src/views/components/homepage/explore/explore.scss
+++ b/Nhom4_Kempinki/src/views/components/homepage/explore/explore.scss
@@ -5,10 +5,8 @@ $height_hotels_des: 550px;
   button {
     &::before {
       font-size: 80px;
-      background-color: white;
+      color: rgba(255, 255, 255, 0.6);
       opacity: 0.6;
-      display: block;
-      border-radius: 50%;
     }
     &:hover::before {
       color: white;
@@ -22,7 +20,7 @@ $height_hotels_des: 550px;
   width: 100%;
   height: 1px;
   top: 12px;
-  background: $text-color-footer;
+  background: $text-color;
 }
 .explore {
   background: #f3f3f3 !important;
@@ -101,11 +99,14 @@ $height_hotels_des: 550px;
             left: 48%;
             display: none;
           }
+          .circle {
+            display: inline-block;
+          }
         }
-      }
-      .slick-slide.slick-current{
-        span{
-          display: inline-block;
+        .selected {
+          span {
+            display: inline-block;
+          }
         }
       }
     }
@@ -218,10 +219,10 @@ $height_hotels_des: 550px;
                 bottom: 0;
                 left: 20px;
                 padding: 3px 10px;
-                border: 2px solid $text-color-footer;
+                border: 2px solid $text-color;
                 &:hover {
                   transition: all 0.3s;
-                  background: $text-color-footer;
+                  background: $text-color;
                   color: white;
                 }
               }
