--- a/Nhom4_Kempinki/src/views/components/homepage/explore/explore.scss
+++ b/Nhom4_Kempinki/src/views/components/homepage/explore/explore.scss
@@ -5,8 +5,11 @@ $height_hotels_des: 550px;
   button {
     &::before {
       font-size: 80px;
-      color: rgba(255, 255, 255, 0.6);
+      color: rgba(255, 255, 255, .6);
       opacity: 0.6;
+      display: block;
+      background-color: white;
+      border-radius: 50%;
     }
     &:hover::before {
       color: white;
@@ -20,7 +23,7 @@ $height_hotels_des: 550px;
   width: 100%;
   height: 1px;
   top: 12px;
-  background: $text-color;
+  background: $text-color-footer;
 }
 .explore {
   background: #f3f3f3 !important;
@@ -103,10 +106,10 @@ $height_hotels_des: 550px;
             display: inline-block;
           }
         }
-        .selected {
-          span {
-            display: inline-block;
-          }
+      }
+      .slick-slide.slick-current{
+        span{
+          display: inline-block;
         }
       }
     }
@@ -219,10 +222,10 @@ $height_hotels_des: 550px;
                 bottom: 0;
                 left: 20px;
                 padding: 3px 10px;
-                border: 2px solid $text-color;
+                border: 2px solid $text-color-footer;
                 &:hover {
                   transition: all 0.3s;
-                  background: $text-color;
+                  background: $text-color-footer;
                   color: white;
                 }
               }
